test_dev/qasm/syntax_errors/e25.qasm
// missing stuff

gate cx a,b { h() a, ;}
gate cy a,b { h b; cx a,b; h b; }
